<resources>
    <string name="app_name">Android Basic Learning</string>
    <string name="nameEt">Name:</string>
    <string name="loginBtn">Login</string>
    <string name="registerTv">Register</string>
</resources>